added my stuff page and some other changes

--- a/style.css
+++ b/style.css
@@ -355,3 +355,10 @@
         }
     }
     
+/* Hide the hero image on small screens */
+@media (max-width: 768px) {
+    .hero-image {
+        display: none;
+    }
+}
+
